# cob_perception_common

./: .travis.yml  README  README.md  stack.xml
cob_3d_mapping_msgs/: CHANGELOG.rst  CMakeLists.txt  cob_3d_mapping_msgs_mapping_rules.yaml  package.xml
cob_3d_mapping_msgs/action/: PlaneExtraction.action  TableObjectCluster.action  Trigger.action
cob_3d_mapping_msgs/msg/: CurvedPolygon.msg  CurvedPolygonArray.msg  Feature.msg  PlaneScene.msg  Shape.msg  ShapeArray.msg  SimilarityScore.msg
cob_3d_mapping_msgs/srv/: MoveToTable.srv
cob_cam3d_throttle/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_cam3d_throttle/src/: cam3d_throttle.cpp
cob_image_flip/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cob_image_flip/ros/include/cob_image_flip/: image_flip.h  kinect_image_flip.h
cob_image_flip/ros/launch/: image_flip.launch  image_flip_nodelet.launch  image_flip_params.yaml
cob_image_flip/ros/src/: image_flip.cpp  image_flip_main.cpp  image_flip_nodelet.cpp  kinect_image_flip.cpp  kinect_image_flip_main.cpp  kinect_image_flip_nodelet.cpp
cob_object_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_object_detection_msgs/msg/: Detection.msg  MaskArray.msg
cob_object_detection_msgs/srv/: ComputeGraspsVacuumGripper.srv  SaveRecordedObject.srv  StartObjectRecording.srv  StopObjectRecording.srv
cob_object_detection_msgs/test/: detection_component_testing.py
cob_object_detection_visualizer/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_object_detection_visualizer/ros/launch/: object_detection_visualizer.launch
cob_object_detection_visualizer/ros/src/: object_detection_visualizer_node.cpp
cob_perception_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_perception_common/common/include/cob_perception_common/: StdAfx.h
cob_perception_common/common/src/: StdAfx.cpp
cob_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_perception_msgs/msg/: ColorDepthImageArray.msg  Detection.msg  DetectionArray.msg  Float64ArrayStamped.msg  People.msg  Person.msg  PersonStamped.msg  PointCloud2Array.msg  PositionMeasurement.msg  PositionMeasurementArray.msg  Skeleton.msg
cob_vision_utils/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_vision_utils/common/include/cob_vision_utils/: CameraSensorDefines.h  CameraSensorToolbox.h  CameraSensorTypes.h  GlobalDefines.h  StdAfx.h  VisionUtils.h
cob_vision_utils/common/src/: CameraSensorToolbox.cpp  StdAfx.cpp  VisionUtils.cpp
cob_vision_utils/msvc/: LibVisionUtils.sln  LibVisionUtils.vcxproj
cob_vision_utils/ros/include/cob_vision_utils/: ros_msg_conversions.h
ipa_3d_fov_visualization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ipa_3d_fov_visualization/launch/: ipa_3d_fov_visualization.launch
ipa_3d_fov_visualization/src/: ipa_3d_fov_visualization.cpp
