<?xml version="1.0"?>
<package format="2">
  <name>cob_3d_mapping_msgs</name>
  <version>0.6.18</version>

  <description>
     Message, service and action definitions for environment perception.
  </description>

  <license>Apache 2.0</license>

  <maintainer email="joshua.hampp@ipa.fhg.de">Joshua Hampp</maintainer>
  <author>Georg Arbeiter</author>

  <url>http://wiki.ros.org/cob_3d_mapping_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>


