<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_3d_mapping_msgs</name>
  <version>0.6.19</version>

  <description>
     Message, service and action definitions for environment perception.
  </description>

  <license>Apache 2.0</license>

  <maintainer email="joshua.hampp@ipa.fhg.de">Joshua Hampp</maintainer>
  <author>Georg Arbeiter</author>

  <url>http://wiki.ros.org/cob_3d_mapping_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="cob_3d_mapping_msgs_mapping_rules.yaml"/>
  </export>
</package>
