<?xml version="1.0"?>
<package format="2">
  <name>cob_cam3d_throttle</name>
  <version>0.6.17</version>
  <description>cob_cam3d_throttle: only for Trottel</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_cam3d_throttle</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="joshua.hampp@ipa.fhg.de">Joshua Hampp</maintainer>
  <author email="goa@ipa.fhg.de">Georg Arbeiter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
