<package>
  <name>cob_image_flip</name>
  <version>0.6.6</version>
  
  <description>
     Flips the image of Care-O-bots kinect in dependence of the viewing direction of the cameras to receive an upright image all the time.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author>Richard Bormann</author>
  
  <url>http://wiki.ros.org/cob_image_flip</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libopencv-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>boost</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <run_depend>boost</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
	
</package>

