<package>
  <name>cob_object_detection_msgs</name>
  <version>0.6.6</version>
  
  <description>
     This package contains message type definitions for object detection
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <author>Florian Weisshardt</author>
  
  <url>http://wiki.ros.org/cob_object_detection_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>

