<?xml version="1.0"?>
<package format="2">
  <name>cob_object_detection_msgs</name>
  <version>0.6.8</version>
  
  <description>
     This package contains message type definitions for object detection
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <author>Florian Weisshardt</author>
  
  <url>http://wiki.ros.org/cob_object_detection_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
 
</package>
