<?xml version="1.0"?>
<package format="2">
  <name>cob_object_detection_visualizer</name>
  <version>0.6.6</version>
  <description>The cob_object_detection_visualizer package</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <license>LGPL</license>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>visualization_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
