<?xml version="1.0"?>
<package format="2">
  <name>cob_object_detection_visualizer</name>
  <version>0.6.8</version>
  <description>The cob_object_detection_visualizer package</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <license>LGPL</license>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
