<?xml version="1.0"?>
<package format="2">
  <name>cob_object_detection_visualizer</name>
  <version>0.6.19</version>
  <description>The cob_object_detection_visualizer package visualizes the object detection result.</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <license>Apache 2.0</license>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cob_object_detection_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
