<?xml version="1.0"?>
<package format="2">

  <name>cob_perception_common</name>

  <description>
    This stack provides utilities commonly needed for a variety of computer vision tasks.
  </description>

  <version>0.6.16</version>
  <license>Apache 2.0</license>

  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  
  <url>http://wiki.ros.org/cob_perception_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_3d_mapping_msgs</exec_depend>
  <exec_depend>cob_cam3d_throttle</exec_depend>
  <exec_depend>cob_image_flip</exec_depend>
  <exec_depend>cob_object_detection_msgs</exec_depend>
  <exec_depend>cob_object_detection_visualizer</exec_depend>
  <exec_depend>cob_perception_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
