<package>
  <name>cob_perception_msgs</name>
  <version>0.6.6</version>
  
  <description>
     This package contains common message type definitions for perception tasks.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <author>Richard Bormann</author>
  
  <url>http://wiki.ros.org/cob_perception_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

